--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -341,4 +341,56 @@ svg * {
   letter-spacing: 0%;
 }
 
+.footer {
+  width: 15rem;
+  height: 17rem;
+  margin: 3rem auto;
+}
+.footer__loading-icon {
+  display: flex;
+  justify-content: center;
+}
+.footer__loading-icon svg {
+  color: #096FFA;
+}
+.footer__links {
+  margin-top: 3.75rem;
+  display: flex;
+  justify-content: space-between;
+}
+.footer__links > a {
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 0.875rem;
+  letter-spacing: 0rem;
+  color: black;
+}
+.footer__powered {
+  margin-top: 1.5rem;
+  margin-bottom: 0.51875rem;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 0.875rem;
+  letter-spacing: 0rem;
+  color: black;
+}
+.footer__logo {
+  display: block;
+  margin: 0 auto;
+}
+.footer__copyright {
+  margin-top: 1.54375rem;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 0.875rem;
+  letter-spacing: 0rem;
+  color: black;
+}
+
 /*# sourceMappingURL=main.css.map */
